Fix z-index of dropdown

--- a/src/mf-select.component.scss
+++ b/src/mf-select.component.scss
@@ -21,6 +21,7 @@
 .select {
     position: relative;
     color: #444444;
+    z-index: 1001;
 
     .select-selected {
         background: #ffffff;
